// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectRecipient should render disabled 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="absolute left-1 z-20"
      >
        <div
          class="Circle-uw7h4j-0 blBpcG mx-3 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
        />
      </div>
      <div
        class="relative w-full"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
          data-testid="select-list__input"
          readonly=""
          value=""
        />
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-5-menu"
            role="combobox"
          >
            <label
              for="downshift-4-input"
              id="downshift-5-label"
            />
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
              data-testid="SelectDropdownInput"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-5-menu"
                aria-labelledby="downshift-5-label"
                autocomplete="off"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default undefined pl-16 pr-11"
                data-testid="SelectDropdownInput__input"
                disabled=""
                id="downshift-4-input"
                placeholder="Select option"
                value=""
              />
            </div>
            <ul
              aria-labelledby="downshift-5-label"
              class="styles__SelectOptionsList-b2falt-1 cGgIup"
              id="downshift-5-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
      <div
        class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 z-20"
        data-testid="SelectRecipient__select-recipient"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render empty 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="absolute left-1 z-20"
      >
        <div
          class="Circle-uw7h4j-0 blBpcG mx-3 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
        />
      </div>
      <div
        class="relative w-full"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
          data-testid="select-list__input"
          readonly=""
          value=""
        />
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-1-menu"
            role="combobox"
          >
            <label
              for="downshift-0-input"
              id="downshift-1-label"
            />
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
              data-testid="SelectDropdownInput"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-1-menu"
                aria-labelledby="downshift-1-label"
                autocomplete="off"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default undefined pl-16 pr-11"
                data-testid="SelectDropdownInput__input"
                id="downshift-0-input"
                placeholder="Select option"
                value=""
              />
            </div>
            <ul
              aria-labelledby="downshift-1-label"
              class="styles__SelectOptionsList-b2falt-1 cGgIup"
              id="downshift-1-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
      <div
        class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 z-20"
        data-testid="SelectRecipient__select-recipient"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render invalid 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="absolute left-1 z-20"
      >
        <div
          class="Circle-uw7h4j-0 blBpcG mx-3 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
        />
      </div>
      <div
        class="relative w-full"
      >
        <input
          aria-invalid="true"
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
          data-testid="select-list__input"
          readonly=""
          value=""
        />
        <div
          class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
        >
          <span
            data-testid="Input-error"
          >
            <div
              class="sc-bdfBwQ iyevwF text-theme-danger-500"
              height="20"
              width="20"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </span>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-9-menu"
            role="combobox"
          >
            <label
              for="downshift-8-input"
              id="downshift-9-label"
            />
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
              data-testid="SelectDropdownInput"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-9-menu"
                aria-labelledby="downshift-9-label"
                autocomplete="off"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default  pr-16 pl-16 pr-18"
                data-testid="SelectDropdownInput__input"
                id="downshift-8-input"
                placeholder="Select option"
                value=""
              />
            </div>
            <ul
              aria-labelledby="downshift-9-label"
              class="styles__SelectOptionsList-b2falt-1 cGgIup"
              id="downshift-9-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
      <div
        class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 z-20"
        data-testid="SelectRecipient__select-recipient"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render with preselected address 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="absolute left-1 z-20"
      >
        <div
          class="Circle-uw7h4j-0 blBpcG mx-3 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
        />
      </div>
      <div
        class="relative w-full"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
          data-testid="select-list__input"
          readonly=""
          value=""
        />
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-13-menu"
            role="combobox"
          >
            <label
              for="downshift-12-input"
              id="downshift-13-label"
            />
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
              data-testid="SelectDropdownInput"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-13-menu"
                aria-labelledby="downshift-13-label"
                autocomplete="off"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default undefined pl-16 pr-11"
                data-testid="SelectDropdownInput__input"
                id="downshift-12-input"
                placeholder="Select option"
                value=""
              />
            </div>
            <ul
              aria-labelledby="downshift-13-label"
              class="styles__SelectOptionsList-b2falt-1 cGgIup"
              id="downshift-13-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
      <div
        class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 z-20"
        data-testid="SelectRecipient__select-recipient"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should update internal state when prop changes 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="absolute left-1 z-20"
      >
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs mx-3"
          data-testid="Avatar"
        >
          <div
            class="w-full h-full"
          >
            <img
              alt="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"40\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
              title="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
            />
          </div>
        </div>
      </div>
      <div
        class="relative w-full"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
          data-testid="select-list__input"
          readonly=""
          value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
        />
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-17-menu"
            role="combobox"
          >
            <label
              for="downshift-16-input"
              id="downshift-17-label"
            />
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
              data-testid="SelectDropdownInput"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-17-menu"
                aria-labelledby="downshift-17-label"
                autocomplete="off"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default undefined pl-16 pr-11"
                data-testid="SelectDropdownInput__input"
                id="downshift-16-input"
                placeholder="Select option"
                value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
              />
            </div>
            <ul
              aria-labelledby="downshift-17-label"
              class="styles__SelectOptionsList-b2falt-1 cGgIup"
              id="downshift-17-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
      <div
        class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 z-20"
        data-testid="SelectRecipient__select-recipient"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
